--- a/POO/U1/Practica/Ejemplos basicos tarea teoria.ipynb
+++ b/POO/U1/Practica/Ejemplos basicos tarea teoria.ipynb
@@ -21,7 +21,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -29,15 +29,23 @@
         "id": "4ACOSw_oLDWi",
         "outputId": "51f25a0d-47a0-42fc-c223-1a3ea28aaa51"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "125\n"
+          ]
+        }
+      ],
       "source": [
         "val1= int(input())\n",
         "val2= int(input())\n",
         "producto= val1*val2\n",
         "if val1 * val2 <= 1000:\n",
-        "    print(val1+val2)\n",
+        "    print(producto)\n",
         "else:\n",
-        "    print(producto)"
+        "    print(val1+val2)"
       ]
     },
     {
@@ -304,7 +312,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.12"
+      "version": "3.11.9"
     }
   },
   "nbformat": 4,
